# learner

./: .dockerignore  .gitignore  ARCHITECTURE.md  LICENSE  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  README.zh-CN.md  SETUP.md  docker-compose.yml  main.py  pyproject.toml  start-dev.sh  start-local.sh
backend/: Dockerfile  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py
backend/app/api/endpoints/: graph.py  knowledge.py  learning.py  review.py
backend/app/core/: config.py
backend/app/db/: database.py
backend/app/models/: __init__.py  knowledge.py
backend/app/schemas/: __init__.py  knowledge.py
backend/app/services/: __init__.py  knowledge_service.py  openai_service.py  spaced_repetition.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: KnowledgeForm.css  KnowledgeForm.tsx  LanguageSwitcher.css  LanguageSwitcher.tsx  Layout.css  Layout.tsx
frontend/src/hooks/: useStore.ts
frontend/src/i18n/: index.ts
frontend/src/i18n/locales/: en-US.json  zh-CN.json
frontend/src/pages/: Graph.css  Graph.tsx  Home.css  Home.tsx  KnowledgeList.css  KnowledgeList.tsx  Review.css  Review.tsx
frontend/src/services/: api.ts
frontend/src/styles/: index.css
frontend/src/types/: index.ts
frontend/src/utils/: date.ts
